@@ -4,18 +4,19 @@ import account.service.aggregate.Account;
 import account.service.aggregate.AccountId;
 import account.service.aggregate.Token;
 import account.service.events.AccountDeleted;
-import messaging.MessageQueue;
+import message.MessageQueue;
 
 import java.util.List;
 import java.util.Map;
 import java.util.concurrent.CompletableFuture;
 import java.util.concurrent.ConcurrentHashMap;
+import java.util.stream.Collectors;
 
 public class AccountRepo {
 
     AccountEventStore eventStore;
 
-    public AccountRepo(MessageQueue bus) {
+    public AccountRepo(QueueTranslator bus) {
         this.eventStore = new AccountEventStore(bus);
     }
 
@@ -35,6 +36,6 @@ public class AccountRepo {
     }
 
     public List<Token> getTokens(AccountId accountId) {
-        return Account.createFromEvents(eventStore.getEventsFor(accountId)).getTokens().stream().toList();
+        return Account.createFromEvents(eventStore.getEventsFor(accountId)).getTokens().stream().collect(Collectors.toList());
     }
 }
